# tile-splitter

./: LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt  run.py
src/: __init__.py  app.py  main.py  main_window.py
src/commands/: __init__.py  rename_commands.py
src/models/: __init__.py  license_info.py  tile.py  tileset.py
src/services/: __init__.py  image_loader.py  license_extractor.py  settings_manager.py  tile_exporter.py
src/utils/: __init__.py  image_formats.py  name_collision.py
src/widgets/: __init__.py  export_dialog.py  grid_settings.py  license_display.py  tile_editor.py  tileset_view.py
tests/: __init__.py
